# durumari-book-reader

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: copy-tauri.js
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EpubReader.tsx  TextReader.tsx
src/lib/: bookLoader.ts
