[package]
name = "durumari-webview"
version = "0.1.0"
description = "Fast local EPUB and text reader"
authors = ["Durumari"]
edition = "2021"

[lib]
name = "durumari_webview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-persisted-scope = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
